Добавить работу с БД и функциональность бронирования